Cafeteria Changes Part 2
Cafeteria is now much more navigable and taller.
The pillars hit the ceiling, new textures have been added, and the walls
have been replaced with new walls to avoid endless squares. There are
also more tables and the lighting has been rebuilt.

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -77,14 +77,14 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/UI
+ContentBrowserTab1.SelectedPaths=/Game/Exported_content
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/Maps/Main
+LastLevel=/Game/Maps/BarebonesCafeteria
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -92,7 +92,7 @@ OpenAssetsAtExit=/Game/UI/MainMenu.MainMenu
 
 [RootWindow]
 ScreenPosition=X=1.000 Y=38.000
-WindowSize=X=1656.000 Y=984.000
+WindowSize=X=1666.000 Y=994.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -109,7 +109,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/Maps
+UNR=C:/Users/Alex/Desktop/Gith/CGT445/Game/Content/Maps
 BRUSH=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 FBX=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 FBXAnim=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
@@ -567,8 +567,8 @@ ExternalImagePicker.TimeStamp=2017.01.14-16.43.36
 ExternalImagePicker.LastCompileMethod=Unknown
 PhAT.TimeStamp=2017.01.14-16.45.20
 PhAT.LastCompileMethod=Unknown
-SequencerWidgets.TimeStamp=2017.01.14-16.45.50
-SequencerWidgets.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2017.02.03-01.08.05
+SequencerWidgets.LastCompileMethod=External
 StaticMeshEditor.TimeStamp=2017.02.03-01.08.10
 StaticMeshEditor.LastCompileMethod=Unknown
 MaterialEditor.TimeStamp=2017.01.14-16.44.40
@@ -577,9 +577,9 @@ TextureEditor.TimeStamp=2017.01.14-16.46.30
 TextureEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Maps/Main
-MRUItem1=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem2=/Game/Maps/BarebonesCafeteria
+MRUItem0=/Game/Maps/BarebonesCafeteria
+MRUItem1=/Game/Maps/Main
+MRUItem2=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 MRUItem3=/Game/Blueprints/Main
 
 [LightingBuildOptions]
@@ -1204,6 +1204,7 @@ Texture2D.Adjustments=True
 Texture2D.Compositing=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Exported_content/ceiling.ceiling;
 RecentlyPlaced=/Game/Exported_content/Table_export/coffeet2obj_(1)/Coffeet2.Coffeet2;
 RecentlyPlaced=/Game/Exported_content/Table_export/coffeet2obj_(1)/glass.glass;
 RecentlyPlaced=/Game/Exported_content/New_folder/Colt.Colt;
@@ -1223,10 +1224,9 @@ RecentlyPlaced=/Game/Exported_content/bluepaint.bluepaint;
 RecentlyPlaced=/Game/Imported_Content/Other_Stuff/Green_Pears/pear_export.pear_export;
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Game/Imported_Content/All_the_guns/RevolverSkin.RevolverSkin;
-RecentlyPlaced=/Game/Imported_Content/All_the_guns/Colt_Colt_Gun1SGMat.Colt_Colt_Gun1SGMat;
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LightingResults
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/E_NumberOfPlayers.E_NumberOfPlayers=0
@@ -1273,6 +1273,7 @@ LastLogListing=PIE
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 InputSettings=InputSettings.Bindings.ActionMappings,
 SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,
+StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,
 
 [WidgetTemplatesExpanded]
 Extra=False
@@ -1385,7 +1386,7 @@ ExperimentalProjectile_C=
 Border=
 EditableTextBox=Object.Style.WidgetStyle
 ProgressBar=Object.Style.WidgetStyle
-Image="Object.Appearance.Brush" 
+Image=Object.Appearance.Brush
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
