--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -77,7 +77,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Exported_content
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -88,10 +88,19 @@ LastLevel=/Game/Maps/BarebonesCafeteria
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/FoodFightersGM.FoodFightersGM
+OpenAssetsAtExit=/Game/Blueprints/FoodFightersChar.FoodFightersChar
+OpenAssetsAtExit=/Game/UI/MainMenu.MainMenu
+OpenAssetsAtExit=/Game/UI/PauseMenu.PauseMenu
+OpenAssetsAtExit=/Game/UI/EndGameScreen.EndGameScreen
+OpenAssetsAtExit=/Game/UI/YouLose.YouLose
+OpenAssetsAtExit=/Game/Blueprints/FoodFightersGI.FoodFightersGI
+OpenAssetsAtExit=/Game/UI/YouWin.YouWin
+OpenAssetsAtExit=/Game/Blueprints/StandardProjectile.StandardProjectile
 
 [RootWindow]
 ScreenPosition=X=1.000 Y=38.000
-WindowSize=X=1676.000 Y=1004.000
+WindowSize=X=1686.000 Y=1014.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -577,8 +586,8 @@ TextureEditor.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/Maps/BarebonesCafeteria
-MRUItem1=/Game/Maps/Main
-MRUItem2=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem1=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem2=/Game/Maps/Main
 MRUItem3=/Game/Blueprints/Main
 
 [LightingBuildOptions]
@@ -1201,6 +1210,32 @@ Texture2D.Texture=True
 Texture2D.ImportSettings=True
 Texture2D.Adjustments=True
 Texture2D.Compositing=True
+PauseMenu_C.Appearance=True
+PauseMenu_C.Interaction=True
+PauseMenu_C.Input=True
+PauseMenu_C.Designer=True
+PauseMenu_C.Layout=True
+PauseMenu_C.Behavior=True
+PauseMenu_C.Performance=True
+PauseMenu_C.Render Transform=True
+PauseMenu_C.Navigation=True
+K2Node_SwitchString.PinOptions=True
+FoodFightersGI_C.Default=True
+EndGameScreen_C.Appearance=True
+EndGameScreen_C.Interaction=True
+EndGameScreen_C.Input=True
+EndGameScreen_C.Designer=True
+EndGameScreen_C.Layout=True
+EndGameScreen_C.Behavior=True
+EndGameScreen_C.Performance=True
+EndGameScreen_C.Render Transform=True
+EndGameScreen_C.Navigation=True
+StandardProjectile_C.Default=True
+StandardProjectile_C.Tick=True
+StandardProjectile_C.Rendering=True
+StandardProjectile_C.Replication=True
+StandardProjectile_C.Input=True
+StandardProjectile_C.Actor=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/Exported_content/ceiling.ceiling;
@@ -1267,6 +1302,8 @@ LastLogListing=LoadErrors
 /Game/Textures/Materials/M_Env_Ice_Frozen_River_1.M_Env_Ice_Frozen_River_1=0
 /Game/UI/PauseMenu.PauseMenu=1
 /Game/Textures/foodfighterstest1.foodfighterstest1=1
+/Game/UI/CharacterSelect.CharacterSelect=1
+/Game/Blueprints/StandardProjectile.StandardProjectile=1
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
@@ -1386,6 +1423,10 @@ Border=
 EditableTextBox=Object.Style.WidgetStyle
 ProgressBar=Object.Style.WidgetStyle
 Image=Object.Appearance.Brush
+K2Node_SwitchString="Object.PinOptions.PinNames" 
+K2Node_Switch="Object.PinOptions.PinNames" 
+K2Node="Object.PinOptions.PinNames" 
+EdGraphNode="Object.PinOptions.PinNames" 
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
