--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -77,24 +77,21 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Maps
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/Maps/Main
+LastLevel=/Game/Maps/BarebonesCafeteria
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/StandardProjectile.StandardProjectile
-OpenAssetsAtExit=/Game/Blueprints/FireProjectile.FireProjectile
-OpenAssetsAtExit=/Game/Blueprints/FoodFightersChar.FoodFightersChar
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [RootWindow]
-ScreenPosition=X=8.000 Y=3.000
-WindowSize=X=1536.000 Y=864.000
+ScreenPosition=X=8.000 Y=4.000
+WindowSize=X=1546.000 Y=873.000
 InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
@@ -111,7 +108,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/denve/Documents/Github/CGT445/Game/Content/Maps
+UNR=C:/Users/Alex/Desktop/Gith/CGT445/Game/Content/Maps
 BRUSH=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 FBX=../../../../../../Users/denve/Documents/Github/CGT445/External Assets/Table export
 FBXAnim=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
@@ -579,8 +576,8 @@ TextureEditor.TimeStamp=2017.01.14-16.46.30
 TextureEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Maps/Main
-MRUItem1=/Game/Maps/BarebonesCafeteria
+MRUItem0=/Game/Maps/BarebonesCafeteria
+MRUItem1=/Game/Maps/Main
 MRUItem2=/Game/Maps/FirstPersonExampleMap
 MRUItem3=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 MRUItem4=/Game/Blueprints/Main
@@ -1368,8 +1365,13 @@ SkeletalMesh.Transform=True
 MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
 MaterialExpressionVectorParameter.General=True
 MaterialExpressionVectorParameter.MaterialExpression=True
+FirstPersonCharacter_C.Variable=True
+FirstPersonCharacter_C.Sockets=True
+FirstPersonCharacter_C.Events=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Meshs/food/grape.grape;
+RecentlyPlaced=/Game/Meshs/food/donut.donut;
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
@@ -1388,8 +1390,6 @@ RecentlyPlaced=/Game/StarterContent/Textures/T_MacroVariation.T_MacroVariation;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Metal_Copper_D.T_Metal_Copper_D;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Brick_Clay_New_N.T_Brick_Clay_New_N;
 RecentlyPlaced=/Game/StarterContent/Textures/T_CobbleStone_Pebble_D.T_CobbleStone_Pebble_D;
-RecentlyPlaced=/Game/Exported_content/tiled_floor.tiled_floor;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Copper.M_Metal_Copper;
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -1542,7 +1542,7 @@ SkeletalMeshComponent=
 SkinnedMeshComponent=
 MeshComponent=
 REINST_FoodFightersChar_C_262=Object.Actor.Tags
-FireProjectile_C="Object.Actor.Tags" 
+FireProjectile_C=Object.Actor.Tags
 IceProjectile_C=Object.Actor.Tags
 MainMenu_C=
 UserWidget=
@@ -1564,7 +1564,7 @@ K2Node=Object.PinOptions.PinNames
 EdGraphNode=Object.PinOptions.PinNames
 StaticMesh=
 StaticMeshActor="Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags" 
-SkyLight="Object.Light.LightComponent.Object.DistanceFieldAmbientOcclusion.OcclusionTint" 
+SkyLight=Object.Light.LightComponent.Object.DistanceFieldAmbientOcclusion.OcclusionTint
 Info=
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
