--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -81,17 +81,17 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 
 [EditorStartup]
 LastLevel=/Game/Maps/BarebonesCafeteria
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [RootWindow]
-ScreenPosition=X=8.000 Y=4.000
-WindowSize=X=1546.000 Y=873.000
+ScreenPosition=X=161.000 Y=59.000
+WindowSize=X=1586.000 Y=913.000
 InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
@@ -1368,8 +1368,33 @@ MaterialExpressionVectorParameter.MaterialExpression=True
 FirstPersonCharacter_C.Variable=True
 FirstPersonCharacter_C.Sockets=True
 FirstPersonCharacter_C.Events=True
+SecondPlayer_Char_C.Default=True
+SecondPlayer_Char_C.Tick=True
+SecondPlayer_Char_C.Character=True
+SecondPlayer_Char_C.Camera=True
+SecondPlayer_Char_C.Pawn=True
+SecondPlayer_Char_C.Rendering=True
+SecondPlayer_Char_C.Replication=True
+SecondPlayer_Char_C.Input=True
+SecondPlayer_Char_C.Actor=True
+SecondPlayer_Char_C.Variable=True
+SecondPlayer_Char_C.TransformCommon=True
+SecondPlayer_Char_C.Sockets=True
+SecondPlayer_Char_C.Animation=True
+SecondPlayer_Char_C.Mesh=True
+SecondPlayer_Char_C.Clothing=True
+SecondPlayer_Char_C.Physics=True
+SecondPlayer_Char_C.Collision=True
+SecondPlayer_Char_C.Lighting=True
+SecondPlayer_Char_C.Tags=True
+SecondPlayer_Char_C.Activation=True
+SecondPlayer_Char_C.Events=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Meshs/food/Pumpkin_D.Pumpkin_D;
+RecentlyPlaced=/Game/Meshs/food/Pumpkin.Pumpkin;
+RecentlyPlaced=/Game/Meshs/food/marshmallow.marshmallow;
+RecentlyPlaced=/Game/Meshs/food/marshmallow_thing.marshmallow_thing;
 RecentlyPlaced=/Game/Meshs/food/grape.grape;
 RecentlyPlaced=/Game/Meshs/food/donut.donut;
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
@@ -1386,10 +1411,6 @@ RecentlyPlaced=/Game/Exported_content/New_folder/RevolverSkin.RevolverSkin;
 RecentlyPlaced=/Game/Exported_content/New_folder/Revolver.Revolver;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Metal_Steel_D.T_Metal_Steel_D;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Perlin_Noise_M.T_Perlin_Noise_M;
-RecentlyPlaced=/Game/StarterContent/Textures/T_MacroVariation.T_MacroVariation;
-RecentlyPlaced=/Game/StarterContent/Textures/T_Metal_Copper_D.T_Metal_Copper_D;
-RecentlyPlaced=/Game/StarterContent/Textures/T_Brick_Clay_New_N.T_Brick_Clay_New_N;
-RecentlyPlaced=/Game/StarterContent/Textures/T_CobbleStone_Pebble_D.T_CobbleStone_Pebble_D;
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -1398,7 +1419,7 @@ LastLogListing=FBXImport
 /Game/Blueprints/E_NumberOfPlayers.E_NumberOfPlayers=0
 /Game/Mannequin/Character/Mesh/SK_Mannequin_PhysicsAsset.SK_Mannequin_PhysicsAsset=0
 /Game/Blueprints/FoodProjectile.FoodProjectile=0
-/Game/Blueprints/FoodFightersChar.FoodFightersChar=0
+/Game/Blueprints/FoodFightersChar.FoodFightersChar=1
 /Game/Blueprints/FireProjectile.FireProjectile=0
 /Game/Blueprints/IceProjectile.IceProjectile=0
 /Game/Blueprints/UI/HUD.HUD=1
@@ -1437,6 +1458,9 @@ LastLogListing=FBXImport
 /Game/UI/CharacterSelect.CharacterSelect=1
 /Game/Blueprints/StandardProjectile.StandardProjectile=0
 /Game/Exported_content/Table_export/coffeet2obj_(1)/Coffeet2.Coffeet2=0
+/Game/Sounds/Lose_Sound_1.Lose_Sound_1=1
+/Game/Sounds/Lose_Sound_3.Lose_Sound_3=1
+/Game/Blueprints/SecondPlayer_Char.SecondPlayer_Char=1
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
@@ -1542,7 +1566,7 @@ SkeletalMeshComponent=
 SkinnedMeshComponent=
 MeshComponent=
 REINST_FoodFightersChar_C_262=Object.Actor.Tags
-FireProjectile_C=Object.Actor.Tags
+FireProjectile_C="Object.Actor.Tags" 
 IceProjectile_C=Object.Actor.Tags
 MainMenu_C=
 UserWidget=
