Table is fixed, plan is added

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -81,7 +81,7 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Meshs/dining-table_obj/dining-table_obj
 
 [EditorStartup]
 LastLevel=/Game/Maps/BarebonesCafeteria
@@ -91,7 +91,7 @@ CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=161.000 Y=59.000
-WindowSize=X=1586.000 Y=913.000
+WindowSize=X=1606.000 Y=933.000
 InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
@@ -1391,6 +1391,14 @@ SecondPlayer_Char_C.Activation=True
 SecondPlayer_Char_C.Events=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Meshs/dining-table_obj/dining-table_obj/texture_Mat.texture_Mat;
+RecentlyPlaced=/Game/Meshs/dining-table_obj/dining-table_obj/texture.texture;
+RecentlyPlaced=/Game/Meshs/dining-table_obj/dining-table_obj/dining_table_fixed.dining_table_fixed;
+RecentlyPlaced=/Game/Meshs/dining-table_obj/dining-table_obj/diningtable.diningtable;
+RecentlyPlaced=/Game/Meshs/coffee_table.coffee_table;
+RecentlyPlaced=/Game/Meshs/wire_154215229.wire_154215229;
+RecentlyPlaced=/Game/Meshs/wire_229154215.wire_229154215;
+RecentlyPlaced=/Game/Meshs/fant.fant;
 RecentlyPlaced=/Game/Meshs/food/Pumpkin_D.Pumpkin_D;
 RecentlyPlaced=/Game/Meshs/food/Pumpkin.Pumpkin;
 RecentlyPlaced=/Game/Meshs/food/marshmallow.marshmallow;
@@ -1403,14 +1411,6 @@ RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLigh
 RecentlyPlaced=/Game/Exported_content/Table_export/coffeet2obj_(1)/The_fixed_pivot2.The_fixed_pivot2;
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Game/Exported_content/Table_export/coffeet2obj_(1)/CoffeeTableFinal.CoffeeTableFinal;
-RecentlyPlaced=/Game/Exported_content/Table_export/coffeet2obj_(1)/Coffeet2.Coffeet2;
-RecentlyPlaced=/Game/Exported_content/ceiling.ceiling;
-RecentlyPlaced=/Game/Exported_content/Table_export/coffeet2obj_(1)/glass.glass;
-RecentlyPlaced=/Game/Exported_content/New_folder/Colt.Colt;
-RecentlyPlaced=/Game/Exported_content/New_folder/RevolverSkin.RevolverSkin;
-RecentlyPlaced=/Game/Exported_content/New_folder/Revolver.Revolver;
-RecentlyPlaced=/Game/StarterContent/Textures/T_Metal_Steel_D.T_Metal_Steel_D;
-RecentlyPlaced=/Game/StarterContent/Textures/T_Perlin_Noise_M.T_Perlin_Noise_M;
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -1566,7 +1566,7 @@ SkeletalMeshComponent=
 SkinnedMeshComponent=
 MeshComponent=
 REINST_FoodFightersChar_C_262=Object.Actor.Tags
-FireProjectile_C="Object.Actor.Tags" 
+FireProjectile_C=Object.Actor.Tags
 IceProjectile_C=Object.Actor.Tags
 MainMenu_C=
 UserWidget=
