--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -81,17 +81,17 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/Meshs/dining-table_obj/dining-table_obj
+ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Shapes
 
 [EditorStartup]
-LastLevel=/Game/Maps/BarebonesCafeteria
+LastLevel=/Engine/Maps/Templates/Template_Default
 
 [AssetEditorManager]
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=161.000 Y=59.000
-WindowSize=X=1606.000 Y=933.000
+ScreenPosition=X=51.000 Y=20.000
+WindowSize=X=1616.000 Y=943.000
 InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
@@ -576,11 +576,12 @@ TextureEditor.TimeStamp=2017.01.14-16.46.30
 TextureEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Maps/BarebonesCafeteria
-MRUItem1=/Game/Maps/Main
-MRUItem2=/Game/Maps/FirstPersonExampleMap
-MRUItem3=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem4=/Game/Blueprints/Main
+MRUItem0=/Game/Maps/Grand_Cafeteria
+MRUItem1=/Game/Maps/BarebonesCafeteria
+MRUItem2=/Game/Maps/Main
+MRUItem3=/Game/Maps/FirstPersonExampleMap
+MRUItem4=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem5=/Game/Blueprints/Main
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1391,29 +1392,29 @@ SecondPlayer_Char_C.Activation=True
 SecondPlayer_Char_C.Events=True
 
 [PlacementMode]
-RecentlyPlaced=/Game/Meshs/dining-table_obj/dining-table_obj/texture_Mat.texture_Mat;
-RecentlyPlaced=/Game/Meshs/dining-table_obj/dining-table_obj/texture.texture;
+RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Wedge_B.Shape_Wedge_B;
+RecentlyPlaced=/Game/Meshs/modern_staircase.modern_staircase;
+RecentlyPlaced=/Game/StarterContent/Props/SM_Stairs.SM_Stairs;
+RecentlyPlaced=/Game/Meshs/Furniture_15_OBJ/Furniture_15_OBJ/Furniture15.Furniture15;
+RecentlyPlaced=/Game/Meshs/chair_obj_(1)/chair_normal.chair_normal;
+RecentlyPlaced=/Game/Meshs/chair_obj_(1)/chair.chair;
+RecentlyPlaced=/Game/Meshs/dining-table_obj/dining-table_obj/walnut.walnut;
 RecentlyPlaced=/Game/Meshs/dining-table_obj/dining-table_obj/dining_table_fixed.dining_table_fixed;
 RecentlyPlaced=/Game/Meshs/dining-table_obj/dining-table_obj/diningtable.diningtable;
+RecentlyPlaced=/Game/StarterContent/Textures/T_Concrete_Panels_D.T_Concrete_Panels_D;
+RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Pebble.M_CobbleStone_Pebble;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Concrete_Poured.M_Concrete_Poured;
+RecentlyPlaced=/Game/Textures/Red_carpet_texture.Red_carpet_texture;
+RecentlyPlaced=/Game/StarterContent/Architecture/Floor_400x400.Floor_400x400;
+RecentlyPlaced=/Game/Geometry/Meshes/TemplateFloor.TemplateFloor;
+RecentlyPlaced=/Game/Meshs/dining-table_obj/dining-table_obj/texture_Mat.texture_Mat;
+RecentlyPlaced=/Game/Meshs/dining-table_obj/dining-table_obj/texture.texture;
 RecentlyPlaced=/Game/Meshs/coffee_table.coffee_table;
 RecentlyPlaced=/Game/Meshs/wire_154215229.wire_154215229;
 RecentlyPlaced=/Game/Meshs/wire_229154215.wire_229154215;
-RecentlyPlaced=/Game/Meshs/fant.fant;
-RecentlyPlaced=/Game/Meshs/food/Pumpkin_D.Pumpkin_D;
-RecentlyPlaced=/Game/Meshs/food/Pumpkin.Pumpkin;
-RecentlyPlaced=/Game/Meshs/food/marshmallow.marshmallow;
-RecentlyPlaced=/Game/Meshs/food/marshmallow_thing.marshmallow_thing;
-RecentlyPlaced=/Game/Meshs/food/grape.grape;
-RecentlyPlaced=/Game/Meshs/food/donut.donut;
-RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
-RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Game/Exported_content/Table_export/coffeet2obj_(1)/The_fixed_pivot2.The_fixed_pivot2;
-RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
-RecentlyPlaced=/Game/Exported_content/Table_export/coffeet2obj_(1)/CoffeeTableFinal.CoffeeTableFinal;
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=LightingResults
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/E_NumberOfPlayers.E_NumberOfPlayers=0
