Cafeteria completely squared in

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -81,17 +81,17 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Shapes
+ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Textures
 
 [EditorStartup]
-LastLevel=/Engine/Maps/Templates/Template_Default
+LastLevel=/Game/Maps/Grand_Cafeteria
 
 [AssetEditorManager]
 CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=51.000 Y=20.000
-WindowSize=X=1616.000 Y=943.000
+WindowSize=X=1626.000 Y=953.000
 InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
@@ -1392,26 +1392,26 @@ SecondPlayer_Char_C.Activation=True
 SecondPlayer_Char_C.Events=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Textures/T_Fire_Tiled_D.T_Fire_Tiled_D;
+RecentlyPlaced=/Game/StarterContent/Textures/T_Concrete_Grime_D.T_Concrete_Grime_D;
+RecentlyPlaced=/Game/StarterContent/Textures/T_CobbleStone_Pebble_D.T_CobbleStone_Pebble_D;
+RecentlyPlaced=/Game/StarterContent/Textures/T_Brick_Clay_New_D.T_Brick_Clay_New_D;
+RecentlyPlaced=/Game/StarterContent/Textures/T_Brick_Clay_New_M.T_Brick_Clay_New_M;
+RecentlyPlaced=/Game/StarterContent/Textures/T_Brick_Clay_Old_N.T_Brick_Clay_Old_N;
+RecentlyPlaced=/Game/StarterContent/Textures/T_Brick_Cut_Stone_D.T_Brick_Cut_Stone_D;
+RecentlyPlaced=/Game/StarterContent/Textures/T_Brick_Clay_New_Mat.T_Brick_Clay_New_Mat;
+RecentlyPlaced=/Game/Textures/Materials/T_Env_Ice_Ground_Rock_2_N.T_Env_Ice_Ground_Rock_2_N;
+RecentlyPlaced=/Game/Textures/Materials/T_Env_Ice_Ground_Rock_1_N.T_Env_Ice_Ground_Rock_1_N;
+RecentlyPlaced=/Game/Textures/Materials/M_Lava_Flowing.M_Lava_Flowing;
+RecentlyPlaced=/Game/Textures/Materials/M_Lava_Pulse.M_Lava_Pulse;
+RecentlyPlaced=/Game/StarterContent/Architecture/Wall_400x200.Wall_400x200;
+RecentlyPlaced=/Game/StarterContent/Architecture/Wall_400x400.Wall_400x400;
 RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Wedge_B.Shape_Wedge_B;
 RecentlyPlaced=/Game/Meshs/modern_staircase.modern_staircase;
 RecentlyPlaced=/Game/StarterContent/Props/SM_Stairs.SM_Stairs;
 RecentlyPlaced=/Game/Meshs/Furniture_15_OBJ/Furniture_15_OBJ/Furniture15.Furniture15;
 RecentlyPlaced=/Game/Meshs/chair_obj_(1)/chair_normal.chair_normal;
 RecentlyPlaced=/Game/Meshs/chair_obj_(1)/chair.chair;
-RecentlyPlaced=/Game/Meshs/dining-table_obj/dining-table_obj/walnut.walnut;
-RecentlyPlaced=/Game/Meshs/dining-table_obj/dining-table_obj/dining_table_fixed.dining_table_fixed;
-RecentlyPlaced=/Game/Meshs/dining-table_obj/dining-table_obj/diningtable.diningtable;
-RecentlyPlaced=/Game/StarterContent/Textures/T_Concrete_Panels_D.T_Concrete_Panels_D;
-RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Pebble.M_CobbleStone_Pebble;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Concrete_Poured.M_Concrete_Poured;
-RecentlyPlaced=/Game/Textures/Red_carpet_texture.Red_carpet_texture;
-RecentlyPlaced=/Game/StarterContent/Architecture/Floor_400x400.Floor_400x400;
-RecentlyPlaced=/Game/Geometry/Meshes/TemplateFloor.TemplateFloor;
-RecentlyPlaced=/Game/Meshs/dining-table_obj/dining-table_obj/texture_Mat.texture_Mat;
-RecentlyPlaced=/Game/Meshs/dining-table_obj/dining-table_obj/texture.texture;
-RecentlyPlaced=/Game/Meshs/coffee_table.coffee_table;
-RecentlyPlaced=/Game/Meshs/wire_154215229.wire_154215229;
-RecentlyPlaced=/Game/Meshs/wire_229154215.wire_229154215;
 
 [MessageLog]
 LastLogListing=LightingResults
