reworked scream system to more easily adjust how often it occurs. Created ammo pickups for standard fire and ice

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -39,7 +39,7 @@ MultipleInstanceLastHeight=720
 MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@SCOTT-PC
 LastExecutedLaunchName=SCOTT-PC
-NewWindowPosition=(X=123,Y=55)
+NewWindowPosition=(X=315,Y=163)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMiddleMousePan=False
@@ -81,18 +81,26 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Textures
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 
 [EditorStartup]
 LastLevel=/Game/Maps/Grand_Cafeteria
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/FoodFightersChar.FoodFightersChar
+OpenAssetsAtExit=/Game/Blueprints/StandardAmmoPickup.StandardAmmoPickup
+OpenAssetsAtExit=/Game/Blueprints/FireAmmoPickup.FireAmmoPickup
+OpenAssetsAtExit=/Game/Blueprints/FireProjectile.FireProjectile
+OpenAssetsAtExit=/Game/Blueprints/IceAmmoPickup.IceAmmoPickup
+OpenAssetsAtExit=/Game/Blueprints/IceProjectile.IceProjectile
+OpenAssetsAtExit=/Game/Blueprints/StandardProjectile.StandardProjectile
+OpenAssetsAtExit=/Game/Sounds/SoundEffects/pipethump.pipethump
 
 [RootWindow]
 ScreenPosition=X=51.000 Y=20.000
-WindowSize=X=1626.000 Y=953.000
-InitiallyMaximized=False
+WindowSize=X=1636.000 Y=963.000
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1390,8 +1398,66 @@ SecondPlayer_Char_C.Lighting=True
 SecondPlayer_Char_C.Tags=True
 SecondPlayer_Char_C.Activation=True
 SecondPlayer_Char_C.Events=True
+Brush.TransformCommon=True
+Brush.BrushSettings=True
+Brush.Actor=True
+Generic.Surface Materials=True
+Generic.Geometry=True
+Generic.Surface Properties=True
+LightmassPrimitiveSettingsObject.Lightmass=True
+StaticMeshActor.Navigation=True
+StaticMeshActor.Mobile=True
+StandardAmmoPickup_C.Tick=True
+StandardAmmoPickup_C.Rendering=True
+StandardAmmoPickup_C.Replication=True
+StandardAmmoPickup_C.Input=True
+StandardAmmoPickup_C.Actor=True
+PointLightComponent.Variable=True
+PointLightComponent.TransformCommon=True
+PointLightComponent.Sockets=True
+PointLightComponent.Light=True
+PointLightComponent.Light Profiles=True
+PointLightComponent.Lightmass=True
+PointLightComponent.LightFunction=True
+PointLightComponent.DistanceFieldShadows=True
+PointLightComponent.Rendering=True
+PointLightComponent.Tags=True
+PointLightComponent.Events=True
+StandardAmmoPickup_C.TransformCommon=True
+CapsuleComponent.Variable=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Tags=True
+CapsuleComponent.Events=True
+FireAmmoPickup_C.Tick=True
+FireAmmoPickup_C.Rendering=True
+FireAmmoPickup_C.Replication=True
+FireAmmoPickup_C.Input=True
+FireAmmoPickup_C.Actor=True
+FireAmmoPickup_C.TransformCommon=True
+IceAmmoPickup_C.Tick=True
+IceAmmoPickup_C.Rendering=True
+IceAmmoPickup_C.Replication=True
+IceAmmoPickup_C.Input=True
+IceAmmoPickup_C.Actor=True
+IceAmmoPickup_C.TransformCommon=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/IceAmmoPickup.IceAmmoPickup;
+RecentlyPlaced=/Game/Blueprints/FireAmmoPickup.FireAmmoPickup;
+RecentlyPlaced=/Game/Blueprints/StandardAmmoPickup.StandardAmmoPickup;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Oak.M_Wood_Oak;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Chrome.M_Metal_Chrome;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Glass.M_Glass;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Floor_Walnut_Worn.M_Wood_Floor_Walnut_Worn;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Floor_Walnut_Polished.M_Wood_Floor_Walnut_Polished;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Pine.M_Wood_Pine;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Walnut.M_Wood_Walnut;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Fire_Tiled_D.T_Fire_Tiled_D;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Concrete_Grime_D.T_Concrete_Grime_D;
 RecentlyPlaced=/Game/StarterContent/Textures/T_CobbleStone_Pebble_D.T_CobbleStone_Pebble_D;
@@ -1402,16 +1468,6 @@ RecentlyPlaced=/Game/StarterContent/Textures/T_Brick_Cut_Stone_D.T_Brick_Cut_Sto
 RecentlyPlaced=/Game/StarterContent/Textures/T_Brick_Clay_New_Mat.T_Brick_Clay_New_Mat;
 RecentlyPlaced=/Game/Textures/Materials/T_Env_Ice_Ground_Rock_2_N.T_Env_Ice_Ground_Rock_2_N;
 RecentlyPlaced=/Game/Textures/Materials/T_Env_Ice_Ground_Rock_1_N.T_Env_Ice_Ground_Rock_1_N;
-RecentlyPlaced=/Game/Textures/Materials/M_Lava_Flowing.M_Lava_Flowing;
-RecentlyPlaced=/Game/Textures/Materials/M_Lava_Pulse.M_Lava_Pulse;
-RecentlyPlaced=/Game/StarterContent/Architecture/Wall_400x200.Wall_400x200;
-RecentlyPlaced=/Game/StarterContent/Architecture/Wall_400x400.Wall_400x400;
-RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Wedge_B.Shape_Wedge_B;
-RecentlyPlaced=/Game/Meshs/modern_staircase.modern_staircase;
-RecentlyPlaced=/Game/StarterContent/Props/SM_Stairs.SM_Stairs;
-RecentlyPlaced=/Game/Meshs/Furniture_15_OBJ/Furniture_15_OBJ/Furniture15.Furniture15;
-RecentlyPlaced=/Game/Meshs/chair_obj_(1)/chair_normal.chair_normal;
-RecentlyPlaced=/Game/Meshs/chair_obj_(1)/chair.chair;
 
 [MessageLog]
 LastLogListing=LightingResults
@@ -1466,7 +1522,7 @@ LastLogListing=LightingResults
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 InputSettings=InputSettings.Bindings.ActionMappings,
-SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,
+SkeletalMeshComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,
 StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,
 
 [WidgetTemplatesExpanded]
@@ -1550,11 +1606,20 @@ BodySetup.Collision=True
 BodySetup.Physics=True
 StaticMeshActor.Lighting=True
 FoodFightersChar_C.Character Movement: Jumping / Falling=True
+Brush.BrushSettings=True
+Brush.Actor=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.Actor=True
+StaticMeshComponent.Physics=False
+StandardAmmoPickup_C.Actor=True
+FireAmmoPickup_C.Replication=True
+FireAmmoPickup_C.Actor=True
+IceAmmoPickup_C.Actor=True
 
 [DetailPropertyExpansion]
 FoodProjectile_C=
-SphereComponent=
-ShapeComponent=
+SphereComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]
+ShapeComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
@@ -1567,8 +1632,8 @@ SkeletalMeshComponent=
 SkinnedMeshComponent=
 MeshComponent=
 REINST_FoodFightersChar_C_262=Object.Actor.Tags
-FireProjectile_C=Object.Actor.Tags
-IceProjectile_C=Object.Actor.Tags
+FireProjectile_C="Object.Actor.Tags" 
+IceProjectile_C="Object.Actor.Tags" 
 MainMenu_C=
 UserWidget=
 Widget=
@@ -1586,11 +1651,17 @@ Image=Object.Appearance.Brush
 K2Node_SwitchString=Object.PinOptions.PinNames
 K2Node_Switch=Object.PinOptions.PinNames
 K2Node=Object.PinOptions.PinNames
-EdGraphNode=Object.PinOptions.PinNames
+EdGraphNode=
 StaticMesh=
 StaticMeshActor="Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags" 
 SkyLight=Object.Light.LightComponent.Object.DistanceFieldAmbientOcclusion.OcclusionTint
 Info=
+Brush=Object.BrushBuilder.BrushBuilder.Object.BrushSettings
+StandardAmmoPickup_C="Object.Actor.Tags" 
+StaticMeshComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]" 
+CapsuleComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]
+FireAmmoPickup_C="Object.Actor.Tags" 
+IceAmmoPickup_C="Object.Actor.Tags" 
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
