added menu hover and click sound effects. added endgame screen music

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -84,7 +84,7 @@ AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 
 [EditorStartup]
-LastLevel=/Game/Maps/Grand_Cafeteria
+LastLevel=/Game/Maps/Main
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -95,7 +95,10 @@ OpenAssetsAtExit=/Game/Blueprints/FireProjectile.FireProjectile
 OpenAssetsAtExit=/Game/Blueprints/IceAmmoPickup.IceAmmoPickup
 OpenAssetsAtExit=/Game/Blueprints/IceProjectile.IceProjectile
 OpenAssetsAtExit=/Game/Blueprints/StandardProjectile.StandardProjectile
-OpenAssetsAtExit=/Game/Sounds/SoundEffects/pipethump.pipethump
+OpenAssetsAtExit=/Game/Sounds/Music/endgameMusic.endgameMusic
+OpenAssetsAtExit=/Game/UI/MainMenu.MainMenu
+OpenAssetsAtExit=/Game/Sounds/SoundEffects/normal-hitnormal.normal-hitnormal
+OpenAssetsAtExit=/Game/Blueprints/FoodFightersGM.FoodFightersGM
 
 [RootWindow]
 ScreenPosition=X=51.000 Y=20.000
@@ -584,9 +587,9 @@ TextureEditor.TimeStamp=2017.01.14-16.46.30
 TextureEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Maps/Grand_Cafeteria
-MRUItem1=/Game/Maps/BarebonesCafeteria
-MRUItem2=/Game/Maps/Main
+MRUItem0=/Game/Maps/Main
+MRUItem1=/Game/Maps/Grand_Cafeteria
+MRUItem2=/Game/Maps/BarebonesCafeteria
 MRUItem3=/Game/Maps/FirstPersonExampleMap
 MRUItem4=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 MRUItem5=/Game/Blueprints/Main
@@ -1518,6 +1521,7 @@ LastLogListing=LightingResults
 /Game/Sounds/Lose_Sound_1.Lose_Sound_1=1
 /Game/Sounds/Lose_Sound_3.Lose_Sound_3=1
 /Game/Blueprints/SecondPlayer_Char.SecondPlayer_Char=1
+/Game/Sounds/SoundEffects/pipethump.pipethump=1
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
@@ -1638,9 +1642,9 @@ MainMenu_C=
 UserWidget=
 Widget=
 Visual=
-Button=
-ContentWidget=
-PanelWidget=
+Button="Object.Appearance.WidgetStyle" 
+ContentWidget="Object.Appearance.WidgetStyle" 
+PanelWidget="Object.Appearance.WidgetStyle" 
 ProjectileMovementComponent=
 MovementComponent=
 ExperimentalProjectile_C=
