Various small tweaks, fixes, and improvements made

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -39,7 +39,7 @@ MultipleInstanceLastHeight=720
 MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@SCOTT-PC
 LastExecutedLaunchName=SCOTT-PC
-NewWindowPosition=(X=315,Y=163)
+NewWindowPosition=(X=2235,Y=163)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMiddleMousePan=False
@@ -87,17 +87,17 @@ ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 LastLevel=/Game/Maps/Main
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Blueprints/FoodFightersGM.FoodFightersGM
+OpenAssetsAtExit=/Game/Maps/Main.Main:PersistentLevel.Main
 OpenAssetsAtExit=/Game/UI/EndGameScreen.EndGameScreen
 OpenAssetsAtExit=/Game/Blueprints/FoodFightersChar.FoodFightersChar
 OpenAssetsAtExit=/Game/UI/PauseMenu.PauseMenu
 OpenAssetsAtExit=/Game/Blueprints/FoodFightersGI.FoodFightersGI
-OpenAssetsAtExit=/Game/UI/MainMenu.MainMenu
 
 [RootWindow]
 ScreenPosition=X=51.000 Y=20.000
-WindowSize=X=1636.000 Y=963.000
+WindowSize=X=1646.000 Y=973.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -114,11 +114,11 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=C:/Users/Alex/Desktop/Gith/CGT445/Game/Content/Maps
+UNR=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/Maps
 BRUSH=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 FBX=../../../../../../Users/denve/Documents/Github/CGT445/External Assets/Table export
 FBXAnim=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
-GenericImport=../../../../../../Users/denve/Documents/Github/CGT445/External Assets/The Big Banana/Banana skin texture.jpg
+GenericImport=../../../../../../Users/Scott/Documents/GitHub/CGT445/External Assets/Fonts/bubble & soap.ttf
 GenericExport=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 GenericOpen=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 GenericSave=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
@@ -580,6 +580,8 @@ MaterialEditor.TimeStamp=2017.01.14-16.44.40
 MaterialEditor.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2017.01.14-16.46.30
 TextureEditor.LastCompileMethod=Unknown
+FontEditor.TimeStamp=2017.01.14-16.43.39
+FontEditor.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/Maps/Main
@@ -1662,8 +1664,8 @@ ProgressBar="Object.Style.WidgetStyle"
 Image=Object.Appearance.Brush
 K2Node_SwitchString="Object.PinOptions.PinNames" 
 K2Node_Switch="Object.PinOptions.PinNames" 
-K2Node=
-EdGraphNode=
+K2Node="Object.PinOptions.PinNames" 
+EdGraphNode="Object.PinOptions.PinNames" 
 StaticMesh=
 StaticMeshActor="Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags" 
 SkyLight=Object.Light.LightComponent.Object.DistanceFieldAmbientOcclusion.OcclusionTint
