Lighting started for cafeteria

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -81,23 +81,17 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Maps
 
 [EditorStartup]
-LastLevel=/Game/Maps/Main
+LastLevel=/Game/Maps/Grand_Cafeteria
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/FoodFightersGM.FoodFightersGM
-OpenAssetsAtExit=/Game/Maps/Main.Main:PersistentLevel.Main
-OpenAssetsAtExit=/Game/UI/EndGameScreen.EndGameScreen
-OpenAssetsAtExit=/Game/Blueprints/FoodFightersChar.FoodFightersChar
-OpenAssetsAtExit=/Game/UI/PauseMenu.PauseMenu
-OpenAssetsAtExit=/Game/Blueprints/FoodFightersGI.FoodFightersGI
 
 [RootWindow]
 ScreenPosition=X=51.000 Y=20.000
-WindowSize=X=1646.000 Y=973.000
+WindowSize=X=1656.000 Y=983.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -114,7 +108,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/Maps
+UNR=C:/Users/Alex/Desktop/Gith/CGT445/Game/Content/Maps
 BRUSH=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 FBX=../../../../../../Users/denve/Documents/Github/CGT445/External Assets/Table export
 FBXAnim=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
@@ -584,9 +578,9 @@ FontEditor.TimeStamp=2017.01.14-16.43.39
 FontEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Maps/Main
-MRUItem1=/Game/Maps/Grand_Cafeteria
-MRUItem2=/Game/Maps/BarebonesCafeteria
+MRUItem0=/Game/Maps/Grand_Cafeteria
+MRUItem1=/Game/Maps/BarebonesCafeteria
+MRUItem2=/Game/Maps/Main
 MRUItem3=/Game/Maps/FirstPersonExampleMap
 MRUItem4=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 MRUItem5=/Game/Blueprints/Main
@@ -1455,6 +1449,7 @@ PanelWidget.Render Transform=True
 PanelWidget.Navigation=True
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Game/Blueprints/IceAmmoPickup.IceAmmoPickup;
 RecentlyPlaced=/Game/Blueprints/FireAmmoPickup.FireAmmoPickup;
 RecentlyPlaced=/Game/Blueprints/StandardAmmoPickup.StandardAmmoPickup;
@@ -1474,7 +1469,6 @@ RecentlyPlaced=/Game/StarterContent/Textures/T_Brick_Clay_Old_N.T_Brick_Clay_Old
 RecentlyPlaced=/Game/StarterContent/Textures/T_Brick_Cut_Stone_D.T_Brick_Cut_Stone_D;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Brick_Clay_New_Mat.T_Brick_Clay_New_Mat;
 RecentlyPlaced=/Game/Textures/Materials/T_Env_Ice_Ground_Rock_2_N.T_Env_Ice_Ground_Rock_2_N;
-RecentlyPlaced=/Game/Textures/Materials/T_Env_Ice_Ground_Rock_1_N.T_Env_Ice_Ground_Rock_1_N;
 
 [MessageLog]
 LastLogListing=LightingResults
@@ -1644,10 +1638,10 @@ Pawn=
 REINST_FoodFightersChar_C_205=Object.Actor.Tags
 SkeletalMeshComponent=
 SkinnedMeshComponent=
-MeshComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]" 
+MeshComponent=
 REINST_FoodFightersChar_C_262=Object.Actor.Tags
-FireProjectile_C="Object.Actor.Tags" 
-IceProjectile_C="Object.Actor.Tags" 
+FireProjectile_C=Object.Actor.Tags
+IceProjectile_C=Object.Actor.Tags
 MainMenu_C=
 UserWidget=
 Widget=
@@ -1659,24 +1653,24 @@ ProjectileMovementComponent=
 MovementComponent=
 ExperimentalProjectile_C=
 Border=
-EditableTextBox="Object.Style.WidgetStyle" 
-ProgressBar="Object.Style.WidgetStyle" 
+EditableTextBox=Object.Style.WidgetStyle
+ProgressBar=Object.Style.WidgetStyle
 Image=Object.Appearance.Brush
-K2Node_SwitchString="Object.PinOptions.PinNames" 
-K2Node_Switch="Object.PinOptions.PinNames" 
-K2Node="Object.PinOptions.PinNames" 
-EdGraphNode="Object.PinOptions.PinNames" 
+K2Node_SwitchString=Object.PinOptions.PinNames
+K2Node_Switch=Object.PinOptions.PinNames
+K2Node=Object.PinOptions.PinNames
+EdGraphNode=Object.PinOptions.PinNames
 StaticMesh=
 StaticMeshActor="Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags" 
 SkyLight=Object.Light.LightComponent.Object.DistanceFieldAmbientOcclusion.OcclusionTint
 Info=
 Brush=Object.BrushBuilder.BrushBuilder.Object.BrushSettings
-StandardAmmoPickup_C="Object.Actor.Tags" 
-StaticMeshComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]" 
+StandardAmmoPickup_C=Object.Actor.Tags
+StaticMeshComponent=
 CapsuleComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]
-FireAmmoPickup_C="Object.Actor.Tags" 
-IceAmmoPickup_C="Object.Actor.Tags" 
-Font="Object.Font" 
+FireAmmoPickup_C=Object.Actor.Tags
+IceAmmoPickup_C=Object.Actor.Tags
+Font=Object.Font
 PauseMenu_C=
 EndGameScreen_C=
 
