added fix for returning to title screen from num player select screen

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -39,7 +39,7 @@ MultipleInstanceLastHeight=720
 MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@SCOTT-PC
 LastExecutedLaunchName=SCOTT-PC
-NewWindowPosition=(X=2235,Y=163)
+NewWindowPosition=(X=123,Y=55)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMiddleMousePan=False
@@ -84,14 +84,15 @@ AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SelectedPaths=/Game/Maps
 
 [EditorStartup]
-LastLevel=/Game/Maps/Grand_Cafeteria
+LastLevel=/Game/Maps/Main
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/UI/MainMenu.MainMenu
 
 [RootWindow]
-ScreenPosition=X=51.000 Y=20.000
-WindowSize=X=1656.000 Y=983.000
+ScreenPosition=X=-8.000 Y=6.000
+WindowSize=X=1536.000 Y=864.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -578,9 +579,9 @@ FontEditor.TimeStamp=2017.01.14-16.43.39
 FontEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Maps/Grand_Cafeteria
-MRUItem1=/Game/Maps/BarebonesCafeteria
-MRUItem2=/Game/Maps/Main
+MRUItem0=/Game/Maps/Main
+MRUItem1=/Game/Maps/Grand_Cafeteria
+MRUItem2=/Game/Maps/BarebonesCafeteria
 MRUItem3=/Game/Maps/FirstPersonExampleMap
 MRUItem4=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 MRUItem5=/Game/Blueprints/Main
@@ -1449,10 +1450,10 @@ PanelWidget.Render Transform=True
 PanelWidget.Navigation=True
 
 [PlacementMode]
-RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
+RecentlyPlaced=/Game/Blueprints/StandardAmmoPickup.StandardAmmoPickup;
 RecentlyPlaced=/Game/Blueprints/IceAmmoPickup.IceAmmoPickup;
 RecentlyPlaced=/Game/Blueprints/FireAmmoPickup.FireAmmoPickup;
-RecentlyPlaced=/Game/Blueprints/StandardAmmoPickup.StandardAmmoPickup;
+RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Oak.M_Wood_Oak;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Chrome.M_Metal_Chrome;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Glass.M_Glass;
@@ -1661,7 +1662,7 @@ K2Node_Switch=Object.PinOptions.PinNames
 K2Node=Object.PinOptions.PinNames
 EdGraphNode=Object.PinOptions.PinNames
 StaticMesh=
-StaticMeshActor="Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags" 
+StaticMeshActor=Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags
 SkyLight=Object.Light.LightComponent.Object.DistanceFieldAmbientOcclusion.OcclusionTint
 Info=
 Brush=Object.BrushBuilder.BrushBuilder.Object.BrushSettings
